syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.xiong.payment_gateway.grpc";
option java_outer_classname = "RefundProto";

package com.xiong.payment_gateway.grpc;

import "google/protobuf/timestamp.proto";

message RefundRequest {
  string transaction_id = 1;
  string amount = 2;
  string reason = 3;
}

message Refund {
  string id = 1;
  string transaction_id = 2;
  string amount = 3;
  string reason = 4;
  string status = 5;
  google.protobuf.Timestamp created_at = 6;
}

service RefundService {
  rpc CreateRefund(RefundRequest) returns (Refund);
}
